org_unpackaged/unpackaged/objects/Task_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Child_Task__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Child Task</label>
        <referenceTo>Task_List__c</referenceTo>
        <relationshipLabel>Task Relationship (Child Task)</relationshipLabel>
        <relationshipName>Task_Relationship</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Associate_Status__c</fullName>
        <description>WhoId associate status</description>
        <label>Parent Associate Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled (old)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending (old)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Parent_Task_Status__c</fullName>
        <description>Validate Parent Task Status and create subsequent task.</description>
        <label>Parent Task Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on someone else</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Parent_Task__c</fullName>
        <label>Parent Task</label>
        <referenceTo>Task_List__c</referenceTo>
        <relationshipLabel>Task Relationship</relationshipLabel>
        <relationshipName>Parent_Task</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Task Relationship</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Task Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Relationship</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>